--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@redux-devtools/extension": "^3.3.0",
     "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
     "moment": "^2.30.1",
     "next": "15.4.3",
     "react": "19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "19.1.0",
     "react-redux": "^9.2.0",
-    "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0",
     "socket.io-client": "^4.8.1",
     "webrtc-adapter": "^9.0.3"
   },
